--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,3 +39,31 @@ input{
     background-color: rgb(187, 92, 92);
 
 }
+#vo{
+    display: flex;
+    height: 500px;
+    margin-right: 0;
+    width: 100%;
+}
+#v2{
+    width: 20%;
+    background-color: aqua;
+}
+#v34{
+    display: flex;
+    flex-direction: column;
+    width: 58%;
+}
+#v3{
+    background-color: blue;
+    height: 40%;
+}
+#v4{
+    background-color: red;
+    height: 60%;
+}
+#v5{
+    width: 20%;
+    background-color: black;
+    margin-right: 0;
+}
