--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,13 +32,40 @@ nav{
     margin-bottom: 0px;
 
 }
-input{
+button{
     padding: 20px;
     font-size: 30px;
     border: 0ch;
     background-color: rgb(187, 92, 92);
 
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: red;}
 #vo{
     display: flex;
     height: 500px;
