--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,17 +78,22 @@ border-radius: 50%;
 }
 #v2{
     width: 22%;
+    border: 1px solid blue;
 }
 #v34{
     display: flex;
     flex-direction: column;
     width: 59%;
+border: 1px solid blue;
 }
 #v3{
-    height: 40%;
+    border: 1px solid blue;
+    height: 100%;
+    resize: both;
 }
 #v4{
-    height: 60%;
+    border: 1px solid blue;
+    height: 100%;
 }
 #v5{
     width: 22%;
@@ -96,6 +101,7 @@ border-radius: 50%;
     overflow: auto;
     border: 1px solid blue;
 background-image: url(pag.jpg);
+height: 100%;
 }
 
 #table{
@@ -196,5 +202,14 @@ ul{
     margin-left: 20%;
 margin-top: 15px;
 font-size: x-larger;
+}
+
+.imm{
+    width: 20%;
+    height: 10%;
+}
+.titrF{
+    text-decoration: dotted;
+    width: 40%;
 }
 
