--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,7 +77,9 @@ border-radius: 50%;
 }
 #v2{
     width: 22%;
-    background-color: rgb(245, 190, 38);
+    background-color: rgb(100, 13, 32);
+    height: 860px;
+    overflow: auto;
 }
 #v2 table{
   width: 80%;
@@ -96,21 +98,23 @@ border-radius: 50%;
 
 }
 #v3{
-    height: 100%;
+    height: 120%;
     resize: both;
-    background: url("coup actua.jpg");
-    background-size: 1200px;
+   
+
 
 }
 #v4{
     height: 100%;
+    background: url("coup actua.jpg");
+    background-size: 780px;
 
 }
 #v5{
     width: 22%;
     margin-right: 0;
     overflow: auto;
-background-image: url(pag.jpg);
+    background-color: rgb(100, 13, 32);
 height: 100%;
 }
 
