--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,6 +40,7 @@ button{
 .dropdown {
     position: relative;
     display: inline-block;
+    cursor: pointer;
   }
   .dropdown-content {
     display: none;
@@ -55,6 +56,10 @@ button{
     text-decoration: none;
     display: block;
   }
+  .dropbtn{
+    cursor: pointer;
+  }
+  
   
   /* Change color of dropdown links on hover */
   .dropdown-content a:hover {background-color: #ddd;}
@@ -92,24 +97,25 @@ border-radius: 50%;
     display: flex;
     flex-direction: column;
     width: 59%;
-
-
 }
 #v3{
-    background: url("world.jpg");
-    border: 1px solid blue;
-
+    height: 90%;
+    
 }
+
+
 #v3 img{
     width: 100%;
     height: 100%;
-
+}
+#v3 #vedio{
+    width: 775px;
+position: absolute;    
 }
 #v4{
     height: 100%;
-    background: url("coup actua.jpg");
-    background-size: 750px;
-
+    background: url(".//coup\ actua.jpg");
+    background-size: 870px;
 }
 #v5{
     width: 22%;
@@ -201,7 +207,7 @@ ul{
     border-radius: 20%;
     border: 0;
     transition:transform;
-
+    cursor: pointer;
 }
 .page_A :hover{
     transform: translateY(-10px);
@@ -209,6 +215,7 @@ ul{
 
 .tx{
     color: white;
+    cursor:pointer;
 }
 .imF{
     margin-top: 30px;
@@ -229,7 +236,7 @@ font-size: x-larger;
     margin-top: 90px;
     font-size: x-large;
     border: 1px dotted;
-margin-right: 20px;
+margin-left: 300px;
 border-radius: 20%;
 }
 .dropbtn a{
@@ -239,3 +246,20 @@ border-radius: 20%;
 .ronaldo{
     background-color: white;
 }
+.im3{
+    width: 100px;
+    height: 50px;
+}
+ #v2::-webkit-scrollbar{
+    width:10px;
+ }
+#v2 :-webkit-scrollbar-thumb :hover{
+        background-color: rgb(0, 0, 0);
+}
+#v5 .page_A{
+transition: transform 0.5;}
+#v5 .page_A:hover{
+    transform: translateY(-10px);
+    
+}
+
