--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,9 @@
 body{
     margin: 0 0 0;
 }
-header{
-    display: flex;
-    background-color: rgb(100, 13, 32);
-}
-
-h1{
-    size: 40px;
+header{display: flex;
+    background-color: rgb(100, 13, 32);}
+h1{size: 40px;
     width: 30%;
     text-align: right;
     color: white;
@@ -15,33 +11,24 @@ h1{
   margin-bottom: 0;
   margin-left: 60px;
   margin-right: 0;
-  font-family: cursive ;
-
-}
+  font-family: cursive ;}
+nav{left: 500px;
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 0px;}
+button{padding: 20px;
+    font-size: 30px;
+    border: 0ch;
+    background-color: rgb(100, 13, 32);
+    color: rgb(251, 255, 10);}
+.dropdown {position: relative;
+    display: inline-block;}
 #top{
     display: flex;
     flex-direction: column;
     width: 93%;
 }
-nav{
-    left: 500px;
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 0px;
-
-}
-button{
-    padding: 20px;
-    font-size: 30px;
-    border: 0ch;
-    background-color: rgb(100, 13, 32);
-    color: rgb(251, 255, 10);
-}
-.dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: white;
@@ -177,24 +164,26 @@ li{
     list-style-type: none ;
 }
 footer h2{
-    color: black;
-}
-footer{
-    background-color: rgb(100, 13, 32);
+    color: black;}
+footer{background-color: rgb(100, 13, 32);
     color: white;
     display: flex;
     height: 160px;
     margin-top: 0;
-    margin: 0;
-}
+    margin: 0;}
 .titreFotter{
-    color: white;
-}
-
-
+    color: white;}
 ul{
-    margin-top: 0;
+   margin-top: 0;
     margin-left: 0;
+}
+.titrF{
+    width: 250px;
+    margin-top: 90px;
+    font-size: x-large;
+    border: 1px dotted;
+margin-right: 20px;
+border-radius: 20%;
 }
 .page_A{
     width: 220px;
@@ -215,22 +204,10 @@ ul{
     width: 120px;
     height: 120px;
     margin-left: 5px;
-}
-
-.t11{
+}.t11{
     margin-left: 20%;
 margin-top: 15px;
 font-size: x-larger;
-}
-
-
-.titrF{
-    width: 250px;
-    margin-top: 90px;
-    font-size: x-large;
-    border: 1px dotted;
-margin-right: 20px;
-border-radius: 20%;
 }
 .dropbtn a{
     text-decoration: none;
